--- a/src/App.scss
+++ b/src/App.scss
@@ -1,56 +1,59 @@
 .App {
-    text-align: center;
-  
-    h1 {
-      font-size: 24px;
-      margin-bottom: 20px;
+  text-align: center;
+
+  h1 {
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+
+  .search-bar {
+    margin-bottom: 20px;
+
+    input {
+      padding: 10px;
+      width: 300px;
+      margin-bottom: 10px;
     }
-  
-    .search-bar {
-      margin-bottom: 20px;
-  
-      input {
-        padding: 10px;
-        width: 300px;
-      }
-  
-      button {
-        padding: 10px 20px;
-        background-color: #007bff;
-        color: #fff;
-        border: none;
-        cursor: pointer;
-      }
+
+    button {
+      padding: 10px 20px;
+      background-color: #007bff;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+      margin-left: 10px; /* Add margin to create space between input and button */
     }
-  
-    .gif-list {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-  
-      .gif {
-        margin: 10px;
-        img {
-          max-width: 100%;
-          height: auto;
-        }
-      }
-    }
-  
-    .pagination {
-        margin-top: 20px;
-        button {
-          padding: 5px 10px;
-          margin: 5px;
-          background-color: #007bff;
-          color: #fff;
-          border: none;
-          cursor: pointer;
-        }
-        
-      .active {
-        background-color: #0056b3;
+  }
+
+  .gif-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    .gif {
+      margin: 10px;
+
+      img {
+        max-width: 100%;
+        height: auto;
       }
     }
   }
-  
+
+  .pagination {
+    margin-top: 20px;
+    
+    button {
+      padding: 5px 10px;
+      margin: 5px;
+      background-color: #007bff;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+    }
+
+    .active {
+      background-color: #0056b3;
+    }
+  }
+}
